code formatting and checkstyle checks